--- a/src/sass/index.sass
+++ b/src/sass/index.sass
@@ -1,5 +1,4 @@
 @use "sass:math"
-@import "node_modules/bulma/sass/utilities/_all.sass"
 
 $checkbox-radius: $radius !default
 $checkbox-border: .1rem solid $grey-lighter !default
@@ -72,6 +71,9 @@ $checkradio-top-offset: 0rem !default
 .is-checkradio[type="radio"],
 .is-checkradio[type="checkbox"]
   outline: 0
+  -webkit-user-select: none
+  -moz-user-select: none
+  -ms-user-select: none
   user-select: none
   display: none
   position: absolute
